Preparing for 1.2 final
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/branches/WICKET_1_2@460639 13f79535-47bb-0310-9956-ffa450edef68