@@ -1,14 +1,14 @@
 /*
- * $Id$ $Revision$
- * $Date$
- *
+ * $Id$
+ * $Revision$ $Date$
+ * 
  * ==============================================================================
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
  * the License at
  * 
  * http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
@@ -17,7 +17,6 @@
  */
 package wicket.util.crypt;
 
-import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.security.GeneralSecurityException;
 
@@ -26,8 +25,6 @@ import javax.crypto.Cipher;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 import wicket.WicketRuntimeException;
 
 /**
@@ -67,7 +64,28 @@ public abstract class AbstractCrypt implements ICrypt
 	{
 		try
 		{
-			return new String(decryptStringToByteArray(text), CHARACTER_ENCODING);
+			byte[] encrypted = Base64.decodeBase64(text.getBytes());
+			return new String(decryptByteArray(encrypted), CHARACTER_ENCODING);
+		}
+		catch (UnsupportedEncodingException ex)
+		{
+			throw new WicketRuntimeException(ex.getMessage());
+		}
+	}
+
+	/**
+	 * Decrypts a string into a string.
+	 * 
+	 * @param text
+	 *            text to decript
+	 * @return the decrypted text
+	 */
+	public final String decryptUrlSafe(final String text)
+	{
+		try
+		{
+			byte[] encrypted = Base64UrlSafe.decodeBase64(text.getBytes());
+			return new String(decryptByteArray(encrypted), CHARACTER_ENCODING);
 		}
 		catch (UnsupportedEncodingException ex)
 		{
@@ -87,7 +105,28 @@ public abstract class AbstractCrypt implements ICrypt
 		try
 		{
 			byte[] cipherText = encryptStringToByteArray(plainText);
-			return new BASE64Encoder().encode(cipherText);
+			return new String(Base64.encodeBase64(cipherText));
+		}
+		catch (GeneralSecurityException e)
+		{
+			log.error("Unable to encrypt text '" + plainText + "'", e);
+			return null;
+		}
+	}
+
+	/**
+	 * Encrypt a string into a string using URL safe Base64 encoding.
+	 * 
+	 * @param plainText
+	 *            text to encrypt
+	 * @return encrypted string
+	 */
+	public final String encryptUrlSafe(final String plainText)
+	{
+		try
+		{
+			byte[] cipherText = encryptStringToByteArray(plainText);
+			return new String(Base64UrlSafe.encodeBase64(cipherText));
 		}
 		catch (GeneralSecurityException e)
 		{
@@ -131,28 +170,21 @@ public abstract class AbstractCrypt implements ICrypt
 			throws GeneralSecurityException;
 
 	/**
-	 * Decrypts a String into a byte array.
+	 * Decrypts an encrypted, but Base64 decoded byte array into a byte array.
 	 * 
 	 * @param encrypted
-	 *            text to decrypt
+	 *            byte array to decrypt
 	 * @return the decrypted text
 	 */
-	private final byte[] decryptStringToByteArray(final String encrypted)
+	private final byte[] decryptByteArray(final byte[] encrypted)
 	{
-		final byte[] plainBytes;
 		try
 		{
-			plainBytes = new BASE64Decoder().decodeBuffer(encrypted);
-			return crypt(plainBytes, Cipher.DECRYPT_MODE);
-		}
-		catch (IOException e)
-		{
-			throw new WicketRuntimeException(e.getMessage());
+			return crypt(encrypted, Cipher.DECRYPT_MODE);
 		}
 		catch (GeneralSecurityException e)
 		{
-			log.error("Unable to decrypt text '" + encrypted + "'", e);
-			return null;
+			throw new WicketRuntimeException("Unable to decrypt the text '" + encrypted + "'", e);
 		}
 	}
 
